--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         <div class="search">
             <form id="search_form" class="menu_search">
                 <div class="size_form">
-                    <select id="take_search" class="menu_search_deco size_search">
+                    <select id="take_search" class="menu_search_deco size_search" required oninput="setCustomValidity('')" >
                         <option class="value_bold" value="">Je cherche ...</option>
                         <option value="vente">Vente</option>
                         <option value="location">Location</option>
                     </select>
                 </div>
                 <div class="size_form">   
-                        <input id="take_local" class="menu_search_deco size_search" type="text" placeholder="Localisation..."  />
+                        <input id="take_local" class="menu_search_deco size_search" type="text" placeholder="Localisation..." required oninput="setCustomValidity('')" />
                 </div>
                 <div class="size_form">
-                    <select id="take_type" class="menu_search_deco size_search">
+                    <select id="take_type" class="menu_search_deco size_search" required oninput="setCustomValidity('')">
                         <option class="value_bold" value="">Type de biens ...</option>
                         <option value="appartement">Appartement</option>
                         <option value="maison">Maison</option>
@@ -66,11 +66,11 @@
                     </select>
                 </div>
                 <div class="size_form">
-                    <input id="take_price" class="menu_search_deco size_search" type="text" placeholder="Prix maximum..."  /> 
+                    <input id="take_price" class="menu_search_deco size_search" type="text" placeholder="Prix maximum..." required oninput="setCustomValidity('')" /> 
                 </div>
                 <div class="size_form">
                     <div class="search_btn">
-                        <input type="submit" class="menu_search_deco size_search" value="Rechercher" />
+                        <input type="submit" id="submitButton" class="menu_search_deco size_search" value="Rechercher" />
                     </div>
                 </div>
             </form>
