--- a/estimate.html
+++ b/estimate.html
@@ -13,22 +13,56 @@
 
     <header class="flex justify-content align-item">    
         <a href="index.html"></a><img class="logo" src="./asset/images/logo x150.png" alt="logo">
-        <input type="checkbox" id="check">
+        <!--<input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars"></i>
-        </label>
+        </label>-->
+
         <nav>
-            <ul class="menu flex justify-content">
+
+            <div class="navbar">
+
+                <ul class="menu flex justify-content">
+                    <li><a class="title-txt" href="buy.html">Acheter</a></li>
+                    <li><a class="title-txt" href="rent.html">Louer</a></li>
+                    <li><a class="title-txt" href="sell.html">Vendre</a></li>
+                    <li><a class="title-txt" href="contact.html">Contact</a></li>
+                </ul> 
+                
+                <div class="logo-mon-compte">
+                    <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+                </div>
+
+            </div>
+
+        </nav>
+
+        <div id="mySidenav" class="sidenav">
+            <a id="closeBtn" href="#" class="close">x</a>
+            <ul id="nav" class="menu flex justify-content">
                 <li><a class="title-txt" href="buy.html">Acheter</a></li>
                 <li><a class="title-txt" href="rent.html">Louer</a></li>
                 <li><a class="title-txt" href="sell.html">Vendre</a></li>
                 <li><a class="title-txt" href="contact.html">Contact</a></li>
-            </ul>            
-        </nav>
-        <div class="logo-mon-compte">
-            <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+            </ul>
+
+            <div class="logo-mon-compte">
+                <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+            </div>
+
         </div>
-        <div id="icons"></div>
+
+
+        <!--<div id="icons"></div>-->
+
+        <a href="#" id="openBtn">
+            <span class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
+
     </header>
     <!--Partie case estimation-->
 
@@ -62,10 +96,10 @@
         <h5>Adresse :</h5>
 
         <div class="adresse">
-            <input type="Adresse" placeholder="   Ex: 121 Rue des Fleurs 87000 Limoges">
+            <input type="text" placeholder="   Ex: 121 Rue des Fleurs 87000 Limoges">
         </div>
         <button class="valider">
-            <a href="#">Valider</a>
+        <a href="#">Valider</a>
         </button>
     </fieldset>
 </form>
@@ -80,7 +114,9 @@
             <p>Lorem ipsum dolor sit amet, 
                 consectetur adipiscing elit. 
                 Duis ultricies pulvinar euismod. </p>
-            <button class="ensaone"><a href="#">En savoirs plus</a></button>
+            <button class="ensaone">
+            <a href="#">En savoirs plus</a>
+            </button>
         </article>
     </fieldset>
 
@@ -92,7 +128,9 @@
             <p>Lorem ipsum dolor sit amet, 
                 consectetur adipiscing elit. 
                 Duis ultricies pulvinar euismod.</p>
-            <button class="ensaone"><a href="#">En savoirs plus</a></button>
+            <button class="ensaone">
+            <a href="#">En savoirs plus</a>
+            </button>
         </article>
     </fieldset>
 </div>
@@ -145,5 +183,7 @@
             </div>
     
     </footer>
+
+    <script src="estimate.js"></script>
 </body>
 </html>
