--- a/rent.html
+++ b/rent.html
@@ -43,7 +43,7 @@
                 <form id="formu">
                     <div>
                         <label for="localization">Lieu :</label>
-                        <input id="local" type="text" placeholder="Adresse, département, région, etc...">
+                        <input id="local" type="text" autofocus placeholder="Adresse, département, région, etc...">
                     </div>
                     <div>
                         <label class="lab-pri">Prix :</label>
