--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </select>
                 </div>
                 <div class="size_form">   
-                        <input id="take_local" class="menu_search_deco size_search" type="text" placeholder="Localisation..." required oninput="setCustomValidity('')" />
+                        <input id="take_local" class="menu_search_deco size_search" type="text" placeholder="Localisation..." required oninput="setCustomValidity('')" autofocus />
                 </div>
                 <div class="size_form">
                     <select id="take_type" class="menu_search_deco size_search" required oninput="setCustomValidity('')">
@@ -66,7 +66,7 @@
                     </select>
                 </div>
                 <div class="size_form">
-                    <input id="take_price" class="menu_search_deco size_search" type="text" placeholder="Prix maximum..." required oninput="setCustomValidity('')" /> 
+                    <input id="take_price" class="menu_search_deco size_search" type="text" placeholder="Prix maximum..." required oninput="setCustomValidity('')" autofocus /> 
                 </div>
                 <div class="size_form">
                     <div class="search_btn">
