--- a/contact.html
+++ b/contact.html
@@ -121,6 +121,7 @@
         </section>
 
         <p class="fields"> (*) champs obligatoires</p>
+        <a href="" class="rgpd">Pour toute demande relative au traitement de vos données personnelles et / ou exercer vos droits, cliquez ici</a>
 
     </div>
 </main>
