--- a/authentification.html
+++ b/authentification.html
@@ -25,7 +25,7 @@
             </ul>            
         </nav>
         <div class="logo-mon-compte">
-            <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+            <a class="active" href="#"><i class="fa-solid fa-user"></i> Mon compte</a>
         </div>
     </header>
 
@@ -34,13 +34,13 @@
     <form action="" method="post">
         <h2>Login form</h2>
         <div class="container">
-            <input type="text" placeholder="enter Username" name="uname" required>
+            <input type="text" placeholder=" enter Email" name="email" required>
             <input type="password" placeholder="enter Password" name="password" required>
             <a href="#" id="forgot-password"> Forgot password?</a>
             <button type="submit" id="login-btn">log in</button>
         </div>
         <div class="member">
-            not a member? <a href="#" id="signup-link"> Sign up</a>
+            not a member? <a href="./inscription.html" id="signup-link"> Sign up</a>
         </div>
 
     </form>
