--- a/inscription.html
+++ b/inscription.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./asset/css/login.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="./asset/css/inscription.css">
+    <title>inscrition</title>
 </head>
 <body>
     <header class="flex justify-content align-item">    
