--- a/estimate.html
+++ b/estimate.html
@@ -184,6 +184,6 @@
     
     </footer>
 
-    <script src="estimate.js"></script>
+<script src="./asset/js/estimate.js"></script>
 </body>
 </html>
