--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             </ul>            
         </nav>
         <div class="logo-mon-compte">
-            <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+            <a class="active" href="authentification.html"><i class="fa-solid fa-user"></i> Mon compte</a>
         </div>
     </header>
 
