--- a/inscription.html
+++ b/inscription.html
@@ -148,7 +148,7 @@
                     </div>
             
             </footer>
-    
+    <script src="./asset/js/inscription.js" > </script>
 </body>
 </html>
    
