--- a/rent.html
+++ b/rent.html
@@ -20,7 +20,7 @@
             </ul>            
         </nav>
         <div class="logo-mon-compte">
-            <a class="active" href="to_manage.html"><i class="fa-solid fa-user"></i>Mon compte</a>
+            <a class="active" href="authentification.html"><i class="fa-solid fa-user"></i>Mon compte</a>
         </div>
         <div class="logo-alter">
             <input type="button" id="burger" value="">
