--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <li><a href="buy.html">Acheter</a></li>
             <li><a href="rent.html">Louer</a></li>
             <li><a href="sell.html">Vendre</a></li>
-            <li><a href="user.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li id="idcount"><a href="index.html">Se connecter</a></li>
         </ul>
         <div id="menu_burger"></div>         
     </nav>
 
     <div class="auth"> 
-        <li><a href="#"><i class="fa-regular fa-user"></i>Mon compte</a></li>
+        <li><a href="authentification.html"><i class="fa-regular fa-user"></i>Mon compte</a></li>
     </div>
 
 </header>
