php connection to database

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<!--header commun-->
+<!--common header-->
     <header class="flex justify-content align-item">    
         <a href="index.html"><img class="logo" src="./asset/images/logo x150.png" alt="logo"></a>
         <input type="checkbox" id="check">
@@ -126,7 +126,7 @@
     </div>
 </main>
 
-<!--footer commun-->
+<!--common footer-->
 <footer>
     <div class="colonne">
         <div class="footer-logo">
